# hermes-9router-tracker

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  install-hermes-quota.ps1  pyproject.toml  run_hermes_install.py  run_hermes_uninstall.py  run_tracker.py
.github/workflows/: ci.yml
src/hermes_9router_tracker/: __init__.py  __main__.py  hermes_config.py  hermes_install.py  hermes_uninstall.py  tracker.py
tests/: test_tracker.py
